samples/_failures_safe/1761128899_aee751_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a1a956d2.c: In function ‘handle_event’:
./samples/SAFE/__tmp_a1a956d2.c:148:5: error: expected expression at end of input
  148 |     if (event <
      |     ^~
./samples/SAFE/__tmp_a1a956d2.c:148:5: error: expected declaration or statement at end of input
